# prime

./: CMakeLists.txt  README.md  argvparse.h  envvar.h  main.cpp  nvidia.h  opengl.h  prime.cfg.example  utils.h  vulkan.h
aur/: PKGBUILD
src/: argvparse.h  configparse.cpp  configparse.h  envvar.h  main.cpp  nvidia.h  opengl.cpp  opengl.h  prime.cpp  primeqt.cpp  primewindow.cpp  primewindow.h  primewindow.ui  utils.h  vulkan.cpp  vulkan.h  xdg.cpp  xdg.h
